<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView-->
    <!--android:id="@+id/screen_title"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="dsdcsdcsdcsdcsdcsd" />-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/value_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp8">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:gravity="start"
                android:text="@string/money_zakat"
                android:textColor="@color/blue"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/money_amount_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/lightGrey"
                android:gravity="start"
                android:hint="@string/money_amount"
                android:inputType="numberDecimal"
                android:padding="@dimen/dp8"
                android:textColor="@color/orange"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/material_text_body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:gravity="start"
                android:text="@string/asset_zakat"
                android:textColor="@color/blue"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/shares_value_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:background="@color/lightGrey"
                android:gravity="start"
                android:hint="@string/shares_value"
                android:inputType="numberDecimal"
                android:padding="@dimen/dp8"
                android:textColor="@color/orange"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/material_text_body1" />

            <EditText
                android:id="@+id/gained_profit_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:background="@color/lightGrey"
                android:gravity="start"
                android:hint="@string/gained_profit"
                android:inputType="numberDecimal"
                android:padding="@dimen/dp8"
                android:textColor="@color/orange"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/material_text_body1" />

            <EditText
                android:id="@+id/bonds_value_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/lightGrey"
                android:gravity="start"
                android:hint="@string/bonds_value"
                android:inputType="numberDecimal"
                android:padding="@dimen/dp8"
                android:textColor="@color/orange"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/material_text_body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:gravity="start"
                android:text="@string/gold_zakat"
                android:textColor="@color/blue"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gram_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:background="@color/lightGrey"
                android:gravity="start"
                android:hint="@string/gold_gram_price"
                android:inputType="numberDecimal"
                android:padding="@dimen/dp8"
                android:textColor="@color/orange"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/material_text_body1" />

            <EditText
                android:id="@+id/gold_weight_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/lightGrey"
                android:gravity="start"
                android:hint="@string/gold_weight"
                android:inputType="numberDecimal"
                android:padding="@dimen/dp8"
                android:textColor="@color/orange"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/material_text_body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:gravity="start"
                android:text="@string/real_estate_zakat"
                android:textColor="@color/blue"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rent_value_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGrey"
                android:gravity="start"
                android:hint="@string/rent_value"
                android:inputType="numberDecimal"
                android:padding="@dimen/dp8"
                android:textColor="@color/orange"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/material_text_body1" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/value_layout"
        android:background="@color/lightGrey" />

    <LinearLayout
        android:id="@+id/value_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/donate_now_btn"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/zakat_value"
            android:textColor="@color/blue"
            android:textSize="@dimen/material_text_subhead"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/zakat_mount_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:textColor="@color/orange"
            android:textSize="@dimen/material_text_subhead" />
    </LinearLayout>

    <Button
        android:id="@+id/donate_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:text="@string/donate_now"
        android:textColor="@color/white" />
</RelativeLayout>