<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupsBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp48"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:layout_marginTop="@dimen/dp32"
            android:gravity="center"
            android:text="@string/welcome_statement"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_headline" />

        <Button
            android:id="@+id/loginAsGuestBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:layout_marginEnd="@dimen/dp32"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/transparent_button"
            android:text="@string/continue_as_guest"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_subhead" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_with"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_title" />

        <Button
            android:id="@+id/loginWithFacebookBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/dp32"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/fb_button"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_subhead" />

        <Button
            android:id="@+id/loginWithGoogleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:layout_marginEnd="@dimen/dp32"
            android:layout_marginStart="@dimen/dp32"
            android:background="@drawable/google_button"
            android:text="@string/google"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_subhead" />
    </LinearLayout>
</ScrollView>