<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="start"
            android:hint="@string/code"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@color/blue" />
    </LinearLayout>

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/material_text_title"
        android:textStyle="bold" />
</RelativeLayout>