<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp32">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_login_description"
        android:textColor="@color/textGrey" />
    <!--<Button-->
    <!--android:id="@+id/loginAsGuestBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="@dimen/dp32"-->
    <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
    <!--android:background="@drawable/blue_bordered_button_bg"-->
    <!--android:text="@string/continue_as_guest"-->
    <!--android:textColor="@color/blue"-->
    <!--android:textSize="@dimen/material_text_subhead" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/login_with"
        android:textColor="@color/blue"
        android:textSize="@dimen/material_text_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginWithFacebookBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp8"
            android:layout_marginRight="@dimen/dp8"
            android:layout_weight="1"
            android:background="@drawable/fb_button"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_subhead" />

        <Button
            android:id="@+id/loginWithGoogleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp8"
            android:layout_marginStart="@dimen/dp8"
            android:layout_weight="1"
            android:background="@drawable/google_button"
            android:text="@string/google"
            android:textColor="@color/white"
            android:textSize="@dimen/material_text_subhead" />

    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/orange_bordered_button_bg"
        android:text="@string/login"
        android:textColor="@color/orange"
        android:textSize="@dimen/material_text_subhead" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/orange_button_bg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/material_text_subhead" />

    <TextView
        android:id="@+id/loginAsGuestBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp32"
        android:layout_marginStart="@dimen/dp32"
        android:gravity="center"
        android:text="@string/continue_as_guest"
        android:textColor="@color/blue"
        android:textSize="@dimen/material_text_subhead" />
    <!--<TextView-->
    <!--android:id="@+id/loginAsGuestBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="@dimen/dp32"-->
    <!--android:layout_marginEnd="@dimen/dp32"-->
    <!--android:layout_marginStart="@dimen/dp32"-->
    <!--android:text="@string/continue_as_guest"-->
    <!--android:gravity="center"-->
    <!--android:textStyle="bold"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="@dimen/material_text_subhead" />-->
    <!--<Button-->
    <!--android:id="@+id/loginWithFacebookBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
    <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
    <!--android:background="@drawable/fb_button"-->
    <!--android:text="@string/facebook"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="@dimen/material_text_subhead" />-->

    <!--<Button-->
    <!--android:id="@+id/loginWithGoogleBtn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="@dimen/dp32"-->
    <!--android:background="@drawable/google_button"-->
    <!--android:text="@string/google"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="@dimen/material_text_subhead" />-->
</LinearLayout>